--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.169.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
