--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
+    "swiper": "^11.2.1",
     "three": "^0.169.0"
   },
   "devDependencies": {
