--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
+    "redux-thunk": "^3.1.0",
     "swiper": "^11.2.1",
     "three": "^0.169.0"
   },
